<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/cancle"
        android:textColor="@color/Red" />

    <RelativeLayout
        android:id="@+id/usuer_rl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp" >

        <TextView
            android:id="@+id/logo_teach"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logo_teach"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/DeepSkyBlue"
            android:textSize="50sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/logo_do"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/logo_teach"
            android:text="@string/logo_do"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/Red"
            android:textSize="50sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/logo_cooking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/logo_do"
            android:text="@string/logo_vagetable"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/Orange"
            android:textSize="50sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:id="@+id/app_slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/usuer_rl"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/app_slogan"
        android:textColor="@color/DarkGray"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/menu_login_select"
            android:text="@string/login"
            android:textColor="@color/White" />

        <Button
            android:id="@+id/regist"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/regist_normol"
            android:text="@string/regist"
            android:textColor="@color/White" />
    </LinearLayout>

</RelativeLayout>