<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/WhiteSmoke"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/White"
        android:fitsSystemWindows="true"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/help_activity_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/setting_selector"
            android:contentDescription="@string/contentprovider"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/help"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/contentprovider"
            android:src="@drawable/ic_back"
            android:visibility="invisible" />
    </LinearLayout>

    <TextView
        android:id="@+id/teachcooking_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/White"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/teachcooking_help" />

    <TextView
        android:id="@+id/basket_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/White"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/basket_help" />

    <TextView
        android:id="@+id/around_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/White"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/around_help" />

    <TextView
        android:id="@+id/mine_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/White"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/mine_help" />

</LinearLayout>