<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/WhiteSmoke"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/White"
        android:fitsSystemWindows="true"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/chang_password_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/contentprovider"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/change_password"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/contentprovider"
            android:src="@drawable/ic_back"
            android:visibility="invisible" />
    </LinearLayout>

    <EditText
        android:id="@+id/input_after_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@color/White"
        android:hint="@string/input_after_password"
        android:inputType="numberPassword"
        android:paddingLeft="5dp" />

    <EditText
        android:id="@+id/input_usuer_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@color/White"
        android:hint="@string/input_password"
        android:inputType="numberPassword"
        android:paddingLeft="5dp" />

    <EditText
        android:id="@+id/input_usuer_password_agin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        android:background="@color/White"
        android:hint="@string/input_password_agin"
        android:inputType="numberPassword"
        android:paddingLeft="5dp" />

    <Button
        android:id="@+id/sure_change_password"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:background="@color/LightGrey"
        android:paddingRight="10dp"
        android:text="@string/sure_change_password"
        android:textColor="@color/White" />

</LinearLayout>