<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/step_num"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/one"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/img"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:layout_margin="3dp"
        android:contentDescription="@string/contentprovider"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginLeft="5dp"
        android:maxLines="7"
        android:text="@string/lingmeng" />

</LinearLayout>