<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp" >

        <ImageView
            android:id="@+id/img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/contentprovider"
            android:scaleType="centerCrop"
            android:src="@drawable/default_big" />

        <TextView
            android:id="@+id/step_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#55C67171"
            android:text="@string/one_two"
            android:textColor="@color/White"
            android:textSize="16sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/zhu_rou"
        android:textSize="25sp" />

</LinearLayout>