<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/WhiteSmoke"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/White"
        android:fitsSystemWindows="true"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/login_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/contentprovider"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/login"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/contentprovider"
            android:src="@drawable/ic_back"
            android:visibility="invisible" />
    </LinearLayout>

    <EditText
        android:id="@+id/usuer_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@color/White"
        android:hint="@string/usuer_name"
        android:inputType="phone"
        android:paddingLeft="5dp" />

    <EditText
        android:id="@+id/usuer_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        android:background="@color/White"
        android:hint="@string/usuer_password"
        android:inputType="numberPassword"
        android:paddingLeft="5dp" />

    <Button
        android:id="@+id/login_activity_login"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:background="@color/LightGrey"
        android:paddingRight="10dp"
        android:text="@string/login"
        android:textColor="@color/White" />

    <TextView
        android:id="@+id/forget_password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/forget_password"
        android:textColor="@color/Red"
        android:textSize="12sp" />

</LinearLayout>