<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/collect_cookbookpic"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="5dp"
        android:background="@color/WhiteSmoke"
        android:contentDescription="@string/contentprovider"
        android:scaleType="centerCrop"
        android:src="@drawable/camera_big" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/collect_cookbookname"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:text="@string/cookbookname" />

        <TextView
            android:id="@+id/publish_nick"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="top"
            android:paddingTop="3dp"
            android:text="@string/publish_nick"
            android:textColor="@color/LightGrey" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:background="@color/LightGrey" />
    </LinearLayout>

</LinearLayout>